force-app/bedrock/lib/scheduler/objects/Scheduler_Config__mdt/Scheduler_Config__mdt.object-meta.xml
<CustomObject>
    <description>Bedrock scheduler job configuration.</description>
    <label>Scheduler Config</label>
    <pluralLabel>Scheduler Configs</pluralLabel>
</CustomObject>