force-app/bedrock/lib/scheduler/objects/Scheduler_Config__mdt/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
                <default>true</default>
                <label>Minutes</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>