force-app/bedrock/lib/scheduler/objects/Scheduler_Config__mdt/fields/Frequency_Value__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Value__c</fullName>
    <label>Frequency Value</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Frequency__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1</fullName><default>false</default><label>1</label></value>
            <value><fullName>2</fullName><default>false</default><label>2</label></value>
            <value><fullName>3</fullName><default>false</default><label>3</label></value>
            <value><fullName>4</fullName><default>false</default><label>4</label></value>
            <value><fullName>5</fullName><default>false</default><label>5</label></value>
            <value><fullName>6</fullName><default>false</default><label>6</label></value>
            <value><fullName>7</fullName><default>false</default><label>7</label></value>
            <value><fullName>8</fullName><default>false</default><label>8</label></value>
            <value><fullName>9</fullName><default>false</default><label>9</label></value>
            <value><fullName>10</fullName><default>false</default><label>10</label></value>
            <value><fullName>11</fullName><default>false</default><label>11</label></value>
            <value><fullName>12</fullName><default>false</default><label>12</label></value>
            <value><fullName>13</fullName><default>false</default><label>13</label></value>
            <value><fullName>14</fullName><default>false</default><label>14</label></value>
            <value><fullName>15</fullName><default>false</default><label>15</label></value>
            <value><fullName>16</fullName><default>false</default><label>16</label></value>
            <value><fullName>17</fullName><default>false</default><label>17</label></value>
            <value><fullName>18</fullName><default>false</default><label>18</label></value>
            <value><fullName>19</fullName><default>false</default><label>19</label></value>
            <value><fullName>20</fullName><default>false</default><label>20</label></value>
            <value><fullName>21</fullName><default>false</default><label>21</label></value>
            <value><fullName>22</fullName><default>false</default><label>22</label></value>
            <value><fullName>23</fullName><default>false</default><label>23</label></value>
            <value><fullName>24</fullName><default>false</default><label>24</label></value>
            <value><fullName>25</fullName><default>false</default><label>25</label></value>
            <value><fullName>26</fullName><default>false</default><label>26</label></value>
            <value><fullName>27</fullName><default>false</default><label>27</label></value>
            <value><fullName>28</fullName><default>false</default><label>28</label></value>
            <value><fullName>29</fullName><default>false</default><label>29</label></value>
            <value><fullName>30</fullName><default>false</default><label>30</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>