force-app/bedrock/lib/scheduler/objects/Scheduler_Config__mdt/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>